# attrition

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PARITY.md  README.md  cloudbuild.yaml  cloudrun-persistent.yaml  cloudrun-service.yaml  mcp-remote.json  package-lock.json  package.json
.claude-plugin/: plugin.json
.claude-plugin/hooks/: auto-capture.sh  block-redundant.sh  detect-workflow.sh  hooks.json  inject-workflow.sh  judge-stop.sh  save-state.sh  session-start.sh  track-file.sh  track-tool.sh
.claude-plugin/skills/advisor-setup/: SKILL.md
.claude/rules/: bp_after_fix.md  bp_capture.md
.claude/skills/attrition/: SKILL.md
.claude/skills/benchpress/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
benchmarks/: compare.py  generate_pain_benchmarks.py  record_session.py  report.py  runner.py
benchmarks/pain_sessions/: cost_overrun.jsonl  false_completion.jsonl  instruction_drift.jsonl  memory_loss.jsonl  rules_overload.jsonl
benchmarks/results/: flagship_comparison.json  pain_benchmarks.json  suite_20260408_203225.json
benchmarks/tasks/: 01-add-dark-mode.yaml  02-fix-login-validation.yaml  03-refactor-async-client.yaml  04-add-auth-tests.yaml  05-update-landing-deploy.yaml  06-add-api-endpoint.yaml  07-fix-css-layout.yaml  08-migrate-database-schema.yaml  09-implement-search.yaml  10-security-audit-fix.yaml
convex/: crons.ts  http.ts  schema.ts
convex/_generated/: api.d.ts
convex/domains/daas/: agentEvaluator.ts  architectClassifier.ts  architectRate.ts  evaluatorSeed.ts  fidelity.ts  liveAgent.ts  nextSteps.ts  radar.ts  radarHnIngest.ts  schema.ts
daas/agent/runtimes/: gemini_deep_research.py
daas/benchmarks/: .gitignore  _rebalance_budgets.py  attrition_csv_eval_harness.py  attrition_eval_template_v1.csv  publish_telemetry.py
daas/benchmarks/bfcl/: baseline.py  runner.py
daas/benchmarks/judgebench/: __init__.py  runner.py
daas/benchmarks/tau2/: __init__.py  runner.py
daas/classifier_eval/: __init__.py  gold.jsonl  runner.py
daas/compile_down/: _redact_secrets.py  cluster_sessions.py  meta_workflow.py  playbook_induction.py  rate_limit.py  real_trace_behavioral_probe.py  real_trace_harness.py  replay_harness.py  run_meta_distill.py
daas/compile_down/emitters/: __init__.py  _bundle_finalize.py  _tools_emit.py  langgraph_python.py  openai_agents.py  orchestrator_worker.py  tool_first_chain.py
daas/compile_down/normalizers/: __init__.py  claude_code.py  cursor.py  gemini_traces.py  langchain_callbacks.py  langgraph_import.py  openai_agents.py
daas/compile_down/world_model/: emitter.py  policy_engine.py
daas/examples/: build_viewer.py  run_floorai_e2e.py  run_showcase.py
daas/examples/results/: showcase.html  showcase.json
daas/fidelity/: cli.py  trial.py
daas/fidelity/artifacts/: judgebench_passthrough_v1.json
daas/results/: TELEMETRY_REPORT.md  attrition_eval_filled_v1_AE01_v3.csv  attrition_eval_filled_v7_full.csv  attrition_eval_filled_v8_full.csv  attrition_eval_filled_v8_langgraph_smoke.csv  attrition_eval_summary_v1_AE01_v3.json  attrition_eval_summary_v7_full.json  attrition_eval_summary_v8_full.json  attrition_eval_summary_v8_langgraph_smoke.json  corpus_public.json  meta_workflows_public.json  replay_results_public.json  scaffold_broadened_fidelity.json  scaffold_runtime_fidelity.json  telemetry.json
daas/skills/: claude_agent_sdk.md  langgraph_python.md
daas/tests/: test_bfcl_adapter.py  test_connector_resolver.py  test_judgebench_adapter.py  test_policy_engine.py  test_rate_limit.py  test_scenarios.py  test_sdk_normalizers.py  test_tau2_adapter.py  test_translation_emitters.py  test_world_model_emitter.py
docs/: ATTRITION_USER_JOURNEY_CHECKPOINTS.md  BENCHMARK_STRATEGY.md  BFCL_FALSIFICATION_FINDINGS.md  COMMERCIAL_VIABILITY.md  DEMO_DAY_READINESS.md  DOGFOOD_REPORT_2026-04-22.md  MENU_FRAMEWORK.md  NODEBENCH_CONSIDERATIONS_TRANSLATED.md  RETHINK_SECTION.md  TRANSLATION_LAYER_AUDIT.md  USER_WORKFLOW_GAP_ANALYSIS.md  WHY_ATTRITION.md
executor/: main.py
experiments/scaffolding_wedge/: report_v3.py
experiments/scaffolding_wedge/results/: mmlu_pro_cache.json  report_v3.html  v3_results.json
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: install
frontend/src/: index.css  main.tsx
frontend/src/_convex/: api.d.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  PreviewTab.tsx  ProofSection.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/lib/: api.ts  demo-data.ts  downloadZip.ts  scanStorage.ts
frontend/src/pages/: Architect.tsx  Benchmark.tsx  Builder.tsx  Compare.tsx  DaasPage.tsx  Dashboard.tsx  Distill.tsx  Docs.tsx  Evaluators.tsx  GetStarted.tsx  Improvements.tsx  Judge.tsx  Landing.tsx  Live.tsx  NextSteps.tsx  Proof.tsx  Radar.tsx  Results.tsx  Run.tsx  RunAnatomy.tsx  ScanResult.tsx  (+1 more)
rust/crates/api/: Cargo.toml
rust/crates/api/src/: lib.rs  state.rs
rust/crates/api/src/middleware/: auth.rs
rust/crates/api/src/routes/: benchmark_api.rs  health.rs  judge.rs  judge_api.rs  live.rs  mod.rs  qa.rs  retention.rs  stats.rs  workflows.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/judge/: Cargo.toml
rust/crates/judge/src/: attention.rs  diff.rs  engine.rs  lib.rs  types.rs
rust/crates/llm-client/: Cargo.toml
rust/crates/llm-client/src/: client.rs  lib.rs  types.rs
rust/crates/mcp-server/: Cargo.toml
rust/crates/mcp-server/src/: lib.rs  protocol.rs  tools.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/src/: lib.rs
rust/crates/workflow/: Cargo.toml
rust/crates/workflow/src/: lib.rs  storage.rs
rust/crates/workflow/src/adapters/: agents_md.rs  claude_code.rs  generic.rs  mod.rs  raw_api.rs
scripts/: deploy-gcp.sh
(+27 files in other folders)
