[package]
name = "nodebench-qa-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum HTTP API server for nodebench-qa"

[dependencies]
nodebench-qa-core = { path = "../core" }
nodebench-qa-engine = { path = "../qa-engine" }
nodebench-qa-agents = { path = "../agents" }
nodebench-qa-telemetry = { path = "../telemetry" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
