[package]
name = "attrition-judge"
version = "0.1.0"
edition = "2024"

[dependencies]
attrition-core = { path = "../core" }
attrition-workflow = { path = "../workflow" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
