[package]
name = "nodebench-qa-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for nodebench-qa"

[dependencies]
nodebench-qa-core = { path = "../core" }
nodebench-qa-engine = { path = "../qa-engine" }
nodebench-qa-agents = { path = "../agents" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpc-core.workspace = true
tracing.workspace = true
uuid.workspace = true
