[package]
name = "attrition-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
attrition-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
